--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 body {
     font-family: 'Raleway', sans-serif;
     font-family: 'Open Sans', sans-serif;
-
 }
 * {
     box-sizing: border-box;
@@ -385,16 +384,20 @@ hr{ margin-top: 50px;
 
 .section4 {
     width: 100%;
-    height: 4234px;
+    height: 716px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     opacity: 1;
+
 }
 
 .section4_title {
     width: 114px;
     height: 42px;
-    margin-left: 576px;
-    margin-right: 576px;
+
+}
+.Pricing_title{
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -437,19 +440,314 @@ hr{ margin-top: 50px;
     margin-top: 71px;
 }
 
-.title_left{
-    width: 51px;
+
+
+.column_left, .column_right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.column_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 70px;
+    margin-left: 70px;
+}
+
+
+
+
+.title_section4{
+
+    width: 123px;
     height: 24px;
-    text-align: left;
+    margin-top: 34px;
+    text-align: center;
     font: normal normal bold 20px/1px Raleway;
     letter-spacing: 0px;
     color: #13253B;
     opacity: 1;
+
+}
+
+.price {
+    width: 59px;
+    height: 64px;
+    text-align: center;
+    font: normal normal 300 46px/2px Open Sans;
+    letter-spacing: 0px;
+    color: #FB3B64;
+    opacity: 1;
+    margin-top: 14px;
+}
+
+.column_center .price{
+    color: #07ACE6;
+}
+
+.column_right .price{
+    color: #55DFB4;
+}
+
+.checkbox{
+ margin-top: 25px;
+    height: 19px;
+
+}
+checkbox_offer {
+    width: 200px;
 }
 
 
+label {
+    text-align: center;
+    font: normal normal normal 14px/41px Open Sans;
+    letter-spacing: 0px;
+    color: #000000;
+    opacity: 1;
+    width: 150px;
+    height: 19px;
+}
+
+.conditions{
+
+    width: 100px;
+    height: 14px;
+    text-align: center;
+    font: normal normal bold 12px/1px Raleway;
+    letter-spacing: 0px;
+    color: #13253B;
+    opacity: 1;
+    margin-top: 5px;
+
+}
+
+.checkbox_offer{
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+
+
+}
+
+.begin{
+
+    width: 150px;
+    height: 50px;
+    background: #EB476E 0 0 no-repeat padding-box;
+    border-radius: 23px;
+    opacity: 1;
+    margin-top: 50px;
+}
+
 .section5 {
     width: 100%;
-    height: 842px;
-    background: cyan;
+    height: 590px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    opacity: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.section5_left
+{
+    width: 400px;
+    height: 300px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    opacity: 1;
+
+}
+
+#Title{
+    text-align: left;
+    font: normal normal normal 49px Raleway;
+    letter-spacing: 0;
+    color: #000000;
+    opacity: 1;
+    width: 350px;
+    height: 60px;
+
+}
+
+.section5_left span{
+
+    width: 265px;
+    height: 22px;
+    text-align: left;
+    font: normal normal normal 16px/22px Open Sans;
+    letter-spacing: 0px;
+    color: #000000;
+    opacity: 1;
+
+
+}
+.mail{
+    background: transparent url(../assets/MailIcon.svg) 0 0 no-repeat padding-box;
+    opacity: 1;
+    width: 40px;
+    height: 30px;
+
+}
+
+
+.call{
+    background: transparent url(../assets/PhoneIcon.svg) 0 0 no-repeat padding-box;
+    opacity: 1;
+    width: 40px;
+    height: 30px;
+}
+
+
+
+
+.contacts{
+
+    display: flex;
+    margin-top: 42px;
+}
+
+.contacts span{
+
+
+    margin-left: 15px;
+}
+
+.section5_right
+{
+    width: 300px;
+    height: 300px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    opacity: 1;
+
+}
+.name, .email {
+    width: 48px;
+    height: 15px;
+    text-align: left;
+    font: normal normal bold 11px/15px Open Sans;
+    letter-spacing: 3.28px;
+    color: #08A6E4;
+    opacity: 1;
+    text-transform: uppercase;
+
+}
+input {
+    outline: none;
+    border: 1px solid #aaa;
+    padding: 10px;
+}
+input[type=checkbox] {
+    display: none;
+}
+
+
+.id-checkbox label {
+
+    color: #B2B2B2;
+    display: flex;
+    width: 405px;
+    height: 108px;
+    text-align: left;
+    font: normal normal normal 12px/17px Open Sans;
+    letter-spacing: 0;
+    margin-top: 30px;
+}
+.id-checkbox label:before {
+    content: '';
+    display: block;
+    min-width: 22px;
+    width: 22px;
+    height: 22px;
+    margin-right: 5px;
+    border: #D1D1D1 1px solid;
+    border-radius: 8px;
+}
+input[type=checkbox]:checked + label:before {
+    background: url("../assets/Checkmark.svg") no-repeat center;
+    background-size: contain;
+}
+
+.Send{
+    background: #08A6E4 0 0 no-repeat padding-box;
+    box-shadow: 5px 10px 14px #07ACE629;
+    border-radius: 35px;
+    opacity: 1;
+    width: 226px;
+    height: 57px;
+    text-align: center;
+    font: normal normal bold 13px/18px Open Sans;
+    letter-spacing: 0;
+    color: #FFFFFF;
+    margin-top: 20px;
+
+
+
+}
+footer{
+    width: 1626px;
+    height: 89px;
+    background: #F7F7F7 0 0 no-repeat padding-box;
+    box-shadow: 0 -5px 40px #00000029;
+    opacity: 1;
+    display: flex;
+
+}
+.logo2{
+    width: 115px;
+    height: 26px;
+    margin-left: 137px;
+    margin-top: 20px;
+    text-align: left;
+    font: normal normal 300 26px/30px Raleway;
+    letter-spacing: 0;
+    color: #08A6E4;
+    opacity: 1;
+
+
+}
+.trade_mark{
+
+    width: 220px;
+    height: 20px;
+    text-align: left;
+    margin-left: 137px;
+    font: normal normal normal 11px/15px Open Sans;
+    letter-spacing: 0;
+    color: #A5A5A5;
+    opacity: 1;
+    margin-top: 7px;
+}
+
+.twitter{
+    width: 24px;
+    height: 24px;
+    background: transparent url("../assets/Twitter.svg") 0 0 no-repeat padding-box;
+    opacity: 1;
+    margin-top: 35px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+    margin-left: auto;
+
+}
+
+.facebook{
+    width: 24px;
+    height: 24px;
+    background:  url("../assets/Facebook.svg") 0 0 no-repeat padding-box;
+    opacity: 1;
+    margin-top: 35px;
+    margin-bottom: 30px;
+    margin-right: 136px;
+
+}
+
+.social_media{
+    display:flex;
+    width: 200px;
+    margin-left: auto;
+
 }
